<resources>
    <!-- Main Activity -->
    <string name="app_name">ft_hangouts</string>
    <string name="menu_main_dark">Dark Theme</string>
    <string name="menu_main_light">Light Theme</string>
    <string name="activity_main_greeting">Great to see you since</string>

    <!-- Contact Cell -->
    <string name="contact_cell_image_description">Profile image for a contact</string>

    <!-- Edit Contact Activity -->
    <string name="menu_edit_contact_save_button">Save</string>
    <string name="menu_edit_contact_cancel_button">Cancel</string>
    <string name="activity_edit_contact_new_contact_title">New Contact</string>
    <string name="activity_edit_contact_edit_contact_title">Edit Contact</string>
    <string name="activity_edit_contact_image_description">Image to define during contact creation</string>
    <string name="activity_edit_contact_name_text_hint">Name</string>
    <string name="activity_edit_contact_phone_text_hint">Phone Number</string>
    <string name="activity_edit_contact_invalid_contact_title">Contact is invalid</string>
    <string name="activity_edit_contact_empty_name_message">Name can\'t be empty</string>
    <string name="activity_edit_contact_empty_phone_message">Phone can\'t be empty</string>

    <!-- Contact Activity -->
    <string name="activity_contact_sms_button">SEND A SMS</string>
    <string name="activity_contact_edit_button">EDIT CONTACT</string>
    <string name="activity_contact_delete_button">DELETE</string>
    <string name="activity_contact_image_description">Profile image for a contact</string>

    <!-- SMS Activity -->
    <string name="activity_sms_send_button">SEND</string>
    <string name="activity_sms_autofill_hint">Type your message here</string>
</resources>
